move contributors assets to .vuepress/public

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,10 @@ package-lock.json
 
 spec/_json/*.js
 
+# docs
 docs/README.md
 docs/code_of_conduct.md
 docs/contributing.md
 docs/license.md
-docs/contributors/
+docs/.vuepress/public/assets/contributors.jpg
+docs/.vuepress/public/assets/_contributors.js
