--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "browserify": "^17.0.0",
     "chai": "^4.0.1",
     "cross-env": "^7.0.2",
+    "dayjs": "^1.10.4",
+    "dayjs-plugin-utc": "^0.1.2",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^7.0.0",
     "glob": "^7.0.0",
