--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "@vuepress/shared-utils": "^1.8.2",
-    "ajv-formats": "^2.0.0-beta.2",
+    "ajv-formats": "^2.0.0",
     "browserify": "^17.0.0",
     "chai": "^4.0.1",
     "cross-env": "^7.0.2",
