--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ajv",
-  "version": "8.18.0",
+  "name": "@redocly/ajv",
+  "version": "8.6.0",
   "description": "Another JSON Schema Validator",
   "main": "dist/ajv.js",
   "types": "dist/ajv.d.ts",
