chore: fix tests by adding extra checks to recursive handler

--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -4,5 +4,8 @@
   "compilerOptions": {
     "types": ["node", "mocha"],
     "noImplicitAny": false
+  },
+  "ts-node": {
+    "transpileOnly": true
   }
 }
