--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "test-karma": "karma start",
     "test-browser": "rm -rf .browser && npm run bundle && scripts/prepare-tests && karma start",
     "test-all": "npm run test-cov && if-node-version 12 npm run test-browser",
-    "test": "npm run json-tests && npm run prettier:check && npm run eslint && npm link && npm link --legacy-peer-deps ajv && npm run test-cov",
+    "test": "npm run json-tests && npm run prettier:check && npm run eslint && npm run rename-package && npm link && npm link --legacy-peer-deps ajv && npm run test-cov; npm run rename-package-back",
     "test-ci": "AJV_FULL_TEST=true npm test",
     "prepublish": "npm run build",
     "benchmark": "npm i && npm run build && npm link && cd ./benchmark && npm link --legacy-peer-deps ajv && npm i && node ./jtd",
     "docs:dev": "./scripts/prepare-site && vuepress dev docs",
-    "docs:build": "./scripts/prepare-site && vuepress build docs"
+    "docs:build": "./scripts/prepare-site && vuepress build docs",
+    "rename-package": "npx npe name ajv",
+    "rename-package-back": "npx npe name @redocly/ajv"
   },
   "nyc": {
     "exclude": [
