--- a/package.json
+++ b/package.json
@@ -61,10 +61,9 @@
   "runkitExampleFilename": ".runkit_example.js",
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
+    "fast-uri": "^2.3.0",
     "json-schema-traverse": "^1.0.0",
-    "require-from-string": "^2.0.2",
-    "uri-js-replace": "^1.0.1",
-    "uri-js": "^4.4.1"
+    "require-from-string": "^2.0.2"
   },
   "devDependencies": {
     "@ajv-validator/config": "^0.5.0",
@@ -86,7 +85,6 @@
     "dayjs-plugin-utc": "^0.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "fast-uri": "^2.3.0",
     "glob": "^10.3.10",
     "husky": "^9.0.11",
     "if-node-version": "^1.1.1",
@@ -107,6 +105,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.2",
     "tsify": "^5.0.4",
+    "uri-js": "^4.4.1",
     "typescript": "5.3.3"
   },
   "collective": {
