--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "fast-deep-equal": "^3.1.3",
     "fast-uri": "^3.0.1",
     "json-schema-traverse": "^1.0.0",
-    "require-from-string": "^2.0.2"
+    "require-from-string": "^2.0.2",
+    "uri-js": "^4.4.1"
   },
   "devDependencies": {
     "@ajv-validator/config": "^0.5.0",
@@ -87,6 +88,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "fast-uri": "^2.3.0",
     "glob": "^10.3.10",
     "husky": "^9.0.11",
     "if-node-version": "^1.1.1",
