--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
   "include": ["lib"],
   "compilerOptions": {
     "outDir": "dist",
-    "lib": ["ES2018", "DOM"],
+    "lib": ["ESNext"],
     "types": ["node"],
     "allowJs": true,
     "target": "ES2018",
+    "moduleResolution": "node",
     "resolveJsonModule": true
   }
 }
