--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "fast-deep-equal": "^3.1.1",
     "json-schema-traverse": "^1.0.0",
     "require-from-string": "^2.0.2",
-    "uri-js": "^4.2.2"
+    "uri-js-replace": "^1.0.1"
   },
   "devDependencies": {
     "@ajv-validator/config": "^0.3.0",
@@ -73,7 +73,7 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^17.0.0",
+    "@types/node": "^22.5.4",
     "@types/require-from-string": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
@@ -106,7 +106,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.0.0",
     "tsify": "^5.0.2",
-    "typescript": "^4.2.0"
+    "typescript": "^5.5.4"
   },
   "collective": {
     "type": "opencollective",
