--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ajv",
+  "name": "@redocly/ajv",
   "version": "8.11.3",
   "description": "Another JSON Schema Validator",
   "main": "dist/ajv.js",
