--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: build & test
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [16.x, 18.x, 20.x, 21.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -22,16 +22,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: git submodule update --init
-      # - name: update website
-      #   if: ${{ github.event_name == 'push' && matrix.node-version == '14.x' }}
-      #   run: ./scripts/publish-site
-      #   env:
-      #     GH_TOKEN_PUBLIC: ${{ secrets.GH_TOKEN_PUBLIC }}
-      #     GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
-      #     GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
       - run: npm run build
       - run: npm run test-ci
-      # - name: coveralls
-      #   uses: coverallsapp/github-action@master
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
