chore: sync with origin (#29)
---------

Co-authored-by: Albina Blazhko <albinablazhko@gmail.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,22 +7,22 @@ on:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Required for OIDC
+      contents: read
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org/
+          node-version: 18
       - run: npm install
       - run: git submodule update --init
       - run: npm run test-ci
       - name: Publish beta version to npm
-        if: "github.event.release.prerelease"
+        if: ${{ github.event.release.prerelease }}
         run: npm publish --tag beta
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish to npm
-        if: "!github.event.release.prerelease"
+        if: ${{ !github.event.release.prerelease }}
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
